--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
 
             <section id="about">
-                <h1>Pranto Roy</h1> <!-- Name displayed prominently -->
-                <img src="images/CV_pic.png" alt="Pranto Roy" class="profile-image"> <!-- Add your image here -->
+                <h1>Pretom Saha</h1> <!-- Name displayed prominently -->
+                <img src="images/CV_pic.png" alt="Pretom Saha" class="profile-image"> <!-- Add your image here -->
 
 
                 
