added image, updated about section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <section id="about">
                 <h1>Pretom Saha</h1> <!-- Name displayed prominently -->
-                <img src="images/CV_pic.png" alt="Pretom Saha" class="profile-image"> <!-- Add your image here -->
+                <img src="pretomsaha.jpg" alt="Pretom Saha" class="profile-image"> <!-- Add your image here -->
 
 
                 
@@ -111,8 +111,7 @@
                     </a>
                 </div>
 
-                <p>I am an Earth Science enthusiast with a Bachelor's degree in Oceanography and a deep interest in studying past environments, events, and climate using approaches such as proxies, stable isotope analysis, computer-based models, etc. I am also interested in studying ocean acoustics and marine mammal acoustics. Apart from academics, I have a deep passion for music and photography and have expertise in music production, songwriting, and video editing.
-                    </p>
+                <p> I'm an Earth Science enthusiast with a bachelor's in Oceanography, deeply passionate about environmental analysis, climate change, and natural resource management by leveraging Geographic Information Systems (GIS) and Remote Sensing. I am also interested in time series data modeling. Beyond academics, I love sketching portraits and doing design work.</p>
             </section>
 
 
@@ -120,11 +119,9 @@
             <section id="research-interests">
                 <h2>Research Interests</h2>
                 <ul>
-                    <li>Paleoceanography</li>
-                    <li>Paleoclimatology</li>
-                    <li>Paleontology</li>
-                    <!-- <li>Ocean acoustics</li> -->
-                    <li>Marine-mammal acoustics</li>
+                    <li>Geographic Information Systems (GIS)</li>
+                    <li>Remote Sensin</li>
+                    <li> Geospatial Artificial Intelligence</li>
                     
                 </ul>
             </section>
